--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,26 @@
             <artifactId>ojdbc11</artifactId>
             <version>23.5.0.24.07</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>2.35</version> <!-- Use a versão compatível -->
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>9.0.64</version> <!-- Use a versão compatível com seu ambiente -->
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
+
+
 
     <build>
         <plugins>
